--- a/application/views/index.html
+++ b/application/views/index.html
@@ -7,5 +7,105 @@
 
 <p>Directory access is forbidden.</p>
 
+  
+step 1
+bilangan prima p dan q
+
+p = 5
+q = 7
+
+n = p*q
+n = 5 * 7
+n = 35
+
+step 2
+phi = (p-1)(q-1)
+phi = (5-1)(7-1)
+phi = (4)(6)
+phi = 24
+
+step3
+tentukan bilangan e
+yang lebih kecil dari n
+
+e = 11
+n = 35
+
+e < n
+11 < 35
+faktor 	:  11 = 1 , 11
+	   24 = 1 , 2^3 , 3	 
+menetukan bilangan koprima dengan cara
+phi/dengan bilangan faktor e dan kecuali 1
+
+koprima = phi/e
+koprima = 24/11
+koprima = 2,18
+
+fpb (e,phi) = 1
+fpb (11,24) = 1
+
+step 4
+
+k=1 , 2 , 3 , 4 , 5 
+d = 1 + (k * phi)/e
+
+d = 1 + (5*24)/11
+d = 1+120/11
+d = 121/11
+d = 11
+
+memakai alfabet a-z = 0-25
+Plaint text =  IBNU HAJAR
+8 1 13 20  7 0 9 0 17 
+
+encripsi
+C = M^e mod n 
+"I" C = 8^11 mod 35 = 22
+"B" C = 1^11 mod 35 = 1
+"N" C = 13^11 mod 35 = 27
+"U" C = 20^11 mod 35 = 20
+
+"H" C = 7^11 mod 35 = 28
+"A" C = 0^11 mod 35 = 0
+"J" C = 9^11 mod 35 = 4
+"A" C = 0^11 mod 35 = 0
+"R" C = 17^11 mod 35 = 33
+
+Hasil Enkripsi : 22 1 27 20  28 0 4 0 33
+
+dekcripsi
+M = C^d mod n 
+
+M = 22^11 mod 35 = 8
+M = 1^11 mod 35 = 1
+M = 27^11 mod 35 = 13
+M = 20^11 mod 35 = 20
+
+M = 28^11 mod 35 = 7
+M = 0^11 mod 35 = 0
+M = 4^11 mod 35 = 9
+M = 0^11 mod 35 = 0
+M = 33^11 mod 35 = 17
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
